--- a/InvestmentBuilderWebClient/Index.html
+++ b/InvestmentBuilderWebClient/Index.html
@@ -11,26 +11,27 @@
     <link rel="stylesheet" href="styles/investmentBuilder.css" type="text/css">
 </head>
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="Index.html">Investment Builder</a>
-            </div>
-            <div class="navbar-collapse collapse">
+    <div ng-app="InvestmentRecord">
+        <div class="navbar navbar-inverse navbar-fixed-top">
+            <div class="container">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="Index.html">Investment Builder</a>
+                </div>
+                @[views/AccountList.html]
             </div>
         </div>
+        <div class="container body-content">
+            <hr />
+            <p />
+            @[views/Layout.html]
+        </div>
+        <script type="text/javascript" src="js/libs.js"></script>
+        <script type="text/javascript" src="js/app.js"></script>
     </div>
-    <div class="container body-content">
-        <hr />
-        <p/>
-        @[views/Layout.html]
-    </div>
-    <script type="text/javascript" src="js/libs.js"></script>
-    <script type="text/javascript" src="js/app.js"></script>
 </body>
 </html>
