Added UserMansagement service and register user functionality

--- a/InvestmentBuilderWebClient/Index.html
+++ b/InvestmentBuilderWebClient/Index.html
@@ -25,9 +25,7 @@
                 @[views/AccountList.html]
             </div>
         </div>
-        <div class="container body-content">
-            <hr />
-            <p />
+        <div class="container body-content layoutTop">
             @[views/Layout.html]
         </div>
         <script type="text/javascript" src="js/libs.js"></script>
