finish user management services -forgotton / change password. tidy up some more code

--- a/InvestmentBuilderWebClient/ForgottenPassword.html
+++ b/InvestmentBuilderWebClient/ForgottenPassword.html
@@ -1,8 +1,7 @@
 ﻿<blockquote>
     <p>
         Enter the email you have registered with and an email will be sent to
-        you with a link to change your password.  You will be asked to change your password
-        after the first login.
+        you with a link to change your password. 
     </p>
 </blockquote>
 
