--- a/InvestmentBuilderWebClient/ChangePassword.html
+++ b/InvestmentBuilderWebClient/ChangePassword.html
@@ -1,7 +1,7 @@
 ﻿<form name="RegisterUserForm" role="form">
     <div class="form-group">
         <label>Email Address</label>
-        <input readonly="readonly" class="form-control" ng-model="EMailAddress" name="EMailAddress" placeholder="email address" />
+        <input class="form-control" ng-model="EMailAddress" name="EMailAddress" placeholder="email address" />
     </div>
 
     <div class="form-group">
