--- a/InvestmentBuilderWebClient/Index.html
+++ b/InvestmentBuilderWebClient/Index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="styles/jquery-ui.theme.css" type="text/css">
     <link rel="stylesheet" href="styles/bootstrap.css" type="text/css">
     <link rel="stylesheet" href="styles/investmentBuilder.css" type="text/css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous" />
 </head>
 <body>
     <div ng-app="InvestmentRecord">
