--- a/InvestmentBuilderWebClient/Index.html
+++ b/InvestmentBuilderWebClient/Index.html
@@ -29,7 +29,8 @@
         <div class="container body-content layoutTop">
             @[views/Layout.html]
         </div>
-        <script type="text/javascript" src="js/libs.js"></script>
+        @[views/ShowIdle.html]
+        <script type="text/javascript" src="js/libsmin.js"></script>
         <script type="text/javascript" src="js/app.js"></script>
     </div>
 </body>
