add validate new user step

--- a/UserManagementService/PasswordReset.html
+++ b/UserManagementService/PasswordReset.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
-
 <html>
+<head>
+    <title>Password Reset</title>
+</head>
 <body>
     <div>
         <p>
-            You have requested a password reset for InvestmentBuilder. Please click on the following link to reset your password:
+            You have requested a password reset for <b>InvestmentBuilder</b>. Please click on the following link to reset your password:
         </p>
-        <a href="<LINK>">Reset Password</a>
+        <h3><a href="<LINK>">Reset Password</a></h3>
         <p>
             You have 1 hour to change your password. After this time you will have to request another password reset
         </p>
